--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,11 +1,9 @@
-<jhi-page-ribbon></jhi-page-ribbon>
-
 <div>
   <router-outlet name="navbar"></router-outlet>
 </div>
 
 <div class="container-fluid">
-  <div class="card jh-card">
+  <div class="jh-card">
     <router-outlet></router-outlet>
   </div>
 
