--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -176,3 +176,69 @@
     </ul>
   </div>
 </nav>
+
+<div class="header-bottom header-sticky">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-xl-3 col-lg-4 col-md-6 vertical-menu d-none d-lg-block">
+        <span class="categorie-title">
+          <fa-icon [icon]="'dropbox'" style="cursor: pointer"></fa-icon>
+          Shop by Categories
+        </span>
+      </div>
+      <div class="col-xl-9 col-lg-8 col-md-12">
+        <nav class="d-none d-lg-block">
+          <ul class="header-bottom-list d-flex">
+            <li class="active category-nav">
+              <a href="index.html">home<i class="fa fa-angle-down"></i></a>
+              <!-- Home Version Dropdown Start -->
+              <ul class="ht-dropdown">
+                <li><a href="index.html">Home Version 1</a></li>
+                <li><a href="index-2.html">Home Version 2</a></li>
+                <li><a href="index-3.html">Home Version 3</a></li>
+                <li><a href="index-4.html">Home Version 4</a></li>
+              </ul>
+              <!-- Home Version Dropdown End -->
+            </li>
+            <li class="category-nav">
+              <a href="shop.html">shop<i class="fa fa-angle-down"></i></a>
+              <!-- Home Version Dropdown Start -->
+              <ul class="ht-dropdown dropdown-style-two">
+                <li><a href="product.html">product details</a></li>
+                <li><a href="compare.html">compare</a></li>
+                <li><a href="cart.html">cart</a></li>
+                <li><a href="checkout.html">checkout</a></li>
+                <li><a href="wishlist.html">wishlist</a></li>
+              </ul>
+              <!-- Home Version Dropdown End -->
+            </li>
+            <li class="category-nav">
+              <a href="blog.html">blog<i class="fa fa-angle-down"></i></a>
+              <!-- Home Version Dropdown Start -->
+              <ul class="ht-dropdown dropdown-style-two">
+                <li><a href="single-blog.html">blog details</a></li>
+              </ul>
+              <!-- Home Version Dropdown End -->
+            </li>
+            <li class="category-nav">
+              <a href="#">pages<i class="fa fa-angle-down"></i></a>
+              <!-- Home Version Dropdown Start -->
+              <ul class="ht-dropdown dropdown-style-two">
+                <li><a href="contact.html">contact us</a></li>
+                <li><a href="register.html">register</a></li>
+                <li><a href="login.html">sign in</a></li>
+                <li><a href="forgot-password.html">forgot password</a></li>
+                <li><a href="404.html">404</a></li>
+              </ul>
+              <!-- Home Version Dropdown End -->
+            </li>
+            <li class="category-nav"><a href="about.html">About us</a></li>
+            <li><a href="contact.html">contact us</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <!-- Row End -->
+  </div>
+  <!-- Container End -->
+</div>
