--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -17,7 +17,7 @@ Navbar
 }
 
 .navbar {
-  padding: 0.2rem 1rem;
+  padding: 0.2rem 200px 0.2rem 213px;
   .dropdown-item.active,
   .dropdown-item.active:focus,
   .dropdown-item.active:hover {
