--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav data-cy="navbar" class="navbar navbar-light navbar-expand-md bg-light">
+<nav data-cy="navbar" class="navbar navbar-light navbar-expand-md">
   <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
     <span class="logo-img"></span>
     <span jhiTranslate="global.title" class="navbar-title">Sellphonealam</span>
@@ -181,8 +181,8 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-xl-3 col-lg-4 col-md-6 vertical-menu d-none d-lg-block">
-        <span class="categorie-title">
-          <fa-icon [icon]="'dropbox'" style="cursor: pointer"></fa-icon>
+        <span>
+          <i class="fa fa-dropbox" style="padding-right: 20px"></i>
           Shop by Categories
         </span>
       </div>
