--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -181,12 +181,7 @@
 <div class="header-bottom header-sticky">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-xl-3 col-lg-4 col-md-6 vertical-menu d-none d-lg-block">
-        <span>
-          <i class="fa fa-dropbox" style="padding-right: 20px"></i>
-          Shop by Categories
-        </span>
-      </div>
+      <jhi-sidebar-in-nav></jhi-sidebar-in-nav>
       <div class="col-xl-9 col-lg-8 col-md-12">
         <nav class="d-none d-lg-block">
           <ul class="header-bottom-list d-flex">
