--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,19 +1,40 @@
-<div class="main-page-banner pb-50 off-white-bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-9 col-lg-8 slider_box">
-        <div class="slider-wrapper theme-default">
-          <!-- Slider Background  Image Start-->
-          <div id="slider" class="nivoSlider">
-            <a href="shop.html"><img src="./content/img/slider/1.jpg" data-thumb="img/slider/1.jpg" alt="" title="#htmlcaption" /></a>
-            <a href="shop.html"><img src="./content/img/slider/2.jpg" data-thumb="img/slider/2.jpg" alt="" title="#htmlcaption2" /></a>
-          </div>
-          <!-- Slider Background  Image Start-->
-        </div>
+<!--Corrousel begin-->
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="./content/images/marmol3.jpg" alt="First slide" />
+      <div class="carousel-caption d-md-block">
+        <h1 class="text-dark font-weight-bold font-italic">Marmol <i class="fab fa-foursquare ml-1"></i>enix</h1>
+        <p class="text-dark">Atencion a Particulares, Profesionales y Empresas.</p>
       </div>
-      <!-- Slider Area End Here -->
     </div>
-    <!-- Row End -->
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./content/images/marmol5.jpg" alt="Second slide" />
+      <div class="carousel-caption d-md-block">
+        <h5 class="text-white">Marmoles, Mesadas, Silestone.</h5>
+        <p class="text-white">Háganos su consulta, solicite su presupuesto, estamos para asesorarlo.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./content/images/marmol10.jpeg" alt="Third slide" />
+      <div class="carousel-caption d-md-block">
+        <h5 class="text-white">Bachas, Repuestos, Accesorios</h5>
+        <p class="text-white">Atencion a Particulares, Profesionales y Empresas.</p>
+      </div>
+    </div>
   </div>
-  <!-- Container End -->
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+<!--Carrousel ends-->
