--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -21,3 +21,41 @@ Main page styles
     background-size: contain;
   }
 }
+
+#carouselExampleIndicators {
+  box-shadow: -9px 8px 14px 5px #35383a;
+}
+
+.w-100 {
+  height: 60vh;
+}
+
+@media screen and (min-width: 1200px) {
+}
+
+@media (min-width: 991.98px) {
+  h1 {
+    font-size: 90px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .w-100 {
+    height: 50vh;
+  }
+}
+
+@media (max-width: 575.98px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  h5,
+  p {
+    font-size: 12px;
+  }
+
+  .w-100 {
+    height: auto;
+  }
+}
