--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -22,6 +22,7 @@ Main page styles
   }
 }
 
+//--------------------- slide
 #carouselExampleIndicators {
   box-shadow: -9px 8px 14px 5px #35383a;
 }
@@ -58,4 +59,27 @@ Main page styles
   .w-100 {
     height: auto;
   }
+}
+//----------------------Custom
+
+.flex-products {
+  display: flex;
+}
+
+.double-product {
+  padding-right: 10px;
+}
+
+.single-product-2 {
+  background: #fff none repeat scroll 0 0;
+  position: relative;
+  transition: all 0.5s ease-in-out 0s;
+  margin: 10px 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 35px;
+}
+
+.banner-site-box {
+  margin-top: auto;
+  margin-bottom: auto;
 }
