--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -53,6 +53,14 @@ Logo styles
   background-size: contain;
 }
 
-.category-nav {
-  padding-right: 33px;
+.div-category {
+  margin-left: auto;
+  margin-right: auto;
+  .category-nav {
+    padding-right: 15px;
+  }
+}
+
+.nav-search {
+  border-top: 1px solid rgb(235, 235, 235);
 }
