--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -45,22 +45,15 @@ Navbar
 Logo styles
 ========================================================================== */
 .logo-img {
-  height: 45px;
-  width: 45px;
+  height: 120px;
+  width: 120px;
   display: inline-block;
   vertical-align: middle;
-  background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
+  background: url('../../../content/img/logo/anhlam.jpg') no-repeat center center;
   background-size: contain;
-}
-
-.div-category {
-  margin-left: auto;
-  margin-right: auto;
-  .category-nav {
-    padding-right: 15px;
-  }
 }
 
 .nav-search {
   border-top: 1px solid rgb(235, 235, 235);
+  padding: 0 0 0 0;
 }
