--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -187,3 +187,68 @@ body {
     text-decoration: none;
   }
 }
+
+:focus {
+  outline: none;
+}
+
+.content {
+  background-color: #f5f5f5;
+  padding: 0% 14% 0% 14%;
+  word-break: break-word;
+  height: calc(100% - 64px);
+}
+.floatingButton {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 20px;
+  right: 20px;
+  background-color: #448aff;
+  color: #fff;
+  border-radius: 50px;
+  /*border-style: solid;*/
+  /*border-width: thin;*/
+  border: none;
+  box-shadow: 2px 2px 3px #999;
+  outline: none;
+  transition: backgroud 0.25s;
+}
+.floatingButton:active {
+  background-color: grey;
+}
+.button.mat-focus-indicator.button.mat-raised-button.mat-button-base {
+  margin: 2px;
+}
+.large-text {
+  font-size: large;
+}
+.totalPrice-text {
+  font-size: x-large;
+  text-align: right;
+}
+.summary {
+  height: 100px;
+  border-style: solid;
+  border-color: #448aff;
+  padding: 20px;
+  margin: 20px 0 20px;
+  border-radius: 4px;
+}
+.ingredients-list {
+  font-size: smaller;
+  font-style: italic;
+}
+.mat-selection-list.mat-selection-list.mat-list-base {
+  padding: 0px;
+}
+.mat-selection-list {
+  overflow: auto;
+  max-height: 100%;
+}
+.mat-card-image:first-child {
+  border-top-left-radius: 0 !important;
+}
+.black-text {
+  color: #000000de !important;
+}
