--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -272,8 +272,8 @@
       <div class="col-lg-5 col-md-8 ml-auto mr-auto col-10">
         <div class="categorie-search-box">
           <form action="#">
-            <input type="text" name="search" placeholder="Tìm kiếm ..." />
-            <button routerLink="/product-client"><i class="lnr lnr-magnifier"></i></button>
+            <input type="text" name="search" placeholder="Tìm kiếm ..." [(ngModel)]="varSearch" />
+            <button routerLink="/product-client" (click)="changeSearch()"><i class="lnr lnr-magnifier"></i></button>
           </form>
         </div>
       </div>
