--- a/src/main/webapp/app/product-for-client/list/product-for-client.component.html
+++ b/src/main/webapp/app/product-for-client/list/product-for-client.component.html
@@ -7,7 +7,6 @@
           <img class="primary-img" src="./content/img/products/36.jpg" alt="single-product" />
           <img class="secondary-img" src="./content/img/products/37.jpg" alt="single-product" />
         </a>
-        <a href="#" class="quick_view" data-toggle="modal" data-target="#myModal" title="Quick View"><i class="lnr lnr-magnifier"></i></a>
       </div>
       <!-- Product Image End -->
       <!-- Product Content Start -->
@@ -24,11 +23,10 @@
         </div>
         <div class="pro-actions">
           <div class="actions-primary">
-            <a href="#" title="Add to Cart"> + Thêm vào dỏ hàng</a>
+            <a title="Thêm vào giỏ hàng" (click)="addToCart(product)"> + Thêm vào giỏ hàng</a>
           </div>
           <div class="actions-secondary">
-            <a href="#" title="Compare"><i class="lnr lnr-sync"></i> <span>Add To Compare</span></a>
-            <a href="#" title="WishList"><i class="lnr lnr-heart"></i> <span>Add to WishList</span></a>
+            <a href="#" title="WishList"><i class="lnr lnr-heart"></i> <span>Thêm vào yêu thích</span></a>
           </div>
         </div>
       </div>
@@ -36,3 +34,80 @@
     </div>
   </div>
 </div>
+
+<ng-template #addToCartModal let-modal="dismiss">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="modal('Close')">&times;</button>
+  </div>
+  <div class="main-product-thumbnail ptb-50 ptb-sm-60">
+    <div class="container">
+      <div class="row">
+        <!-- Main Thumbnail Image Start -->
+        <div class="col-lg-5 mb-all-40">
+          <!-- Thumbnail Large Image start -->
+          <div class="tab-content">
+            <div id="thumb1" class="tab-pane fade show active">
+              <a data-fancybox="images" href="./content/img/products/35.jpg"
+                ><img src="./content/img/products/35.jpg" alt="product-view"
+              /></a>
+            </div>
+          </div>
+          <!-- Thumbnail image end -->
+        </div>
+        <!-- Main Thumbnail Image End -->
+        <!-- Thumbnail Description Start -->
+        <div class="col-lg-7">
+          <div class="thubnail-desc fix">
+            <h3 class="product-header">{{ productInCart.name }}</h3>
+            <div class="rating-summary fix mtb-10">
+              <div class="rating">
+                <i class="fa fa-star" *ngFor="let start of star(productInCart.rate)"></i>
+                <i class="fa fa-star-o" *ngFor="let start of star(5 - (productInCart.rate ? productInCart.rate : 0))"></i>
+              </div>
+              <div class="rating-feedback">
+                <a href="#">(1 review)</a>
+                <a href="#">add to your review</a>
+              </div>
+            </div>
+            <div class="pro-price mtb-30">
+              <p class="d-flex align-items-center">
+                <span class="prev-price">{{ productInCart.unitPrice | currency: 'VND':true }}</span>
+                <span class="price">{{ productInCart.unitPrice | currency: 'VND':true }}</span
+                ><span class="saving-price">save 8%</span>
+              </p>
+            </div>
+            <p class="mb-20 pro-desc-details">
+              {{ productInCart.productDetails!.description }}
+            </p>
+            <div class="product-size mb-20 clearfix d-flex">
+              <div>
+                <label>Màu</label>
+                <select class="">
+                  <option>Hồng</option>
+                  <option>Đen</option>
+                  <option>Trắng</option>
+                </select>
+              </div>
+              <div class="ml-30">
+                <label for="quantity">Số lượng</label>
+                <input class="quantity mr-15" id="quantity" type="number" min="1" [(ngModel)]="productInCart.quantity" />
+              </div>
+            </div>
+            <div class="box-quantity d-flex hot-product2">
+              <div class="pro-actions">
+                <div class="actions-primary">
+                  <a tooltip="Thêm vào giỏ hàng" (click)="fillToCart()"> + Thêm vào giỏ hàng</a>
+                </div>
+                <div class="actions-secondary">
+                  <a tooltip="Thêm vào yêu thích"><i class="lnr lnr-heart"></i> <span>Thêm vào yêu thích</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Thumbnail Description End -->
+      </div>
+    </div>
+    <!-- Container End -->
+  </div>
+</ng-template>
