--- a/src/main/webapp/app/cart/list-product/cart.component.html
+++ b/src/main/webapp/app/cart/list-product/cart.component.html
@@ -2,88 +2,79 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-sm-12">
-        <!-- Form Start -->
-        <form action="#">
-          <!-- Table Content Start -->
-          <div class="table-content table-responsive mb-45">
-            <table>
-              <thead>
-                <tr>
-                  <th class="product-thumbnail">Image</th>
-                  <th class="product-name">Product</th>
-                  <th class="product-price">Price</th>
-                  <th class="product-quantity">Quantity</th>
-                  <th class="product-subtotal">Total</th>
-                  <th class="product-remove">Remove</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="product-thumbnail">
-                    <a href="#"><img src="./content/img/products/13.jpg" alt="cart-image" /></a>
-                  </td>
-                  <td class="product-name"><a href="#">dictum idrisus</a></td>
-                  <td class="product-price"><span class="amount">£165.00</span></td>
-                  <td class="product-quantity"><input type="number" value="1" /></td>
-                  <td class="product-subtotal">£165.00</td>
-                  <td class="product-remove">
-                    <a href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="product-thumbnail">
-                    <a href="#"><img src="./content/img/products/23.jpg" alt="cart-image" /></a>
-                  </td>
-                  <td class="product-name"><a href="#">Carte Postal Clock</a></td>
-                  <td class="product-price"><span class="amount">£50.00</span></td>
-                  <td class="product-quantity"><input type="number" value="1" /></td>
-                  <td class="product-subtotal">£50.00</td>
-                  <td class="product-remove">
-                    <a href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+        <!-- Table Content Start -->
+        <div class="table-content table-responsive mb-45">
+          <table>
+            <thead>
+              <tr>
+                <th class="product-thumbnail">Ảnh</th>
+                <th class="product-name">Tên sản phẩm</th>
+                <th class="product-price">Đơn giá</th>
+                <th class="product-quantity">Số lượng</th>
+                <th class="product-subtotal">Tổng tiền</th>
+                <th class="product-remove">Xóa</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let product of orderDetails; let i = index">
+                <td class="product-thumbnail">
+                  <a href="#"><img src="./content/img/products/13.jpg" alt="cart-image" /></a>
+                </td>
+                <td class="product-name">
+                  <a href="#">{{ product.product!.name }}</a>
+                </td>
+                <td class="product-price">
+                  <span class="amount">{{ product.unitPrice | currency: 'VND':true }}</span>
+                </td>
+                <td class="product-quantity"><input type="number" [(ngModel)]="product.quantity" /></td>
+                <td class="product-subtotal">{{ product.total | currency: 'VND':true }}</td>
+                <td class="product-remove">
+                  <a href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- Table Content Start -->
+        <div class="row">
+          <!-- Cart Button Start -->
+          <div class="col-md-8 col-sm-12">
+            <div class="buttons-cart">
+              <input type="submit" (click)="updateCart()" value="Sửa giỏ hàng" />
+              <a routerLink="/">Tiếp tục mua hàng</a>
+            </div>
           </div>
-          <!-- Table Content Start -->
-          <div class="row">
-            <!-- Cart Button Start -->
-            <div class="col-md-8 col-sm-12">
-              <div class="buttons-cart">
-                <input type="submit" value="Update Cart" />
-                <a href="#">Continue Shopping</a>
+          <!-- Cart Button Start -->
+          <!-- Cart Totals Start -->
+          <div class="col-md-4 col-sm-12">
+            <div class="cart_totals float-md-right text-md-right">
+              <h2>Tiền Hàng</h2>
+              <br />
+              <table class="float-md-right">
+                <tbody>
+                  <tr class="cart-subtotal">
+                    <th>Ước tính</th>
+                    <td>
+                      <span class="amount">{{ getTotalAmount() | currency: 'VND':true }}</span>
+                    </td>
+                  </tr>
+                  <tr class="order-total">
+                    <th>Tổng tiền</th>
+                    <td>
+                      <strong
+                        ><span class="amount">{{ getTotalAmount() | currency: 'VND':true }}</span></strong
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="wc-proceed-to-checkout">
+                <a routerLink="/">Thanh toán</a>
               </div>
             </div>
-            <!-- Cart Button Start -->
-            <!-- Cart Totals Start -->
-            <div class="col-md-4 col-sm-12">
-              <div class="cart_totals float-md-right text-md-right">
-                <h2>Cart Totals</h2>
-                <br />
-                <table class="float-md-right">
-                  <tbody>
-                    <tr class="cart-subtotal">
-                      <th>Subtotal</th>
-                      <td><span class="amount">$215.00</span></td>
-                    </tr>
-                    <tr class="order-total">
-                      <th>Total</th>
-                      <td>
-                        <strong><span class="amount">$215.00</span></strong>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <div class="wc-proceed-to-checkout">
-                  <a href="#">Proceed to Checkout</a>
-                </div>
-              </div>
-            </div>
-            <!-- Cart Totals End -->
           </div>
-          <!-- Row End -->
-        </form>
-        <!-- Form End -->
+          <!-- Cart Totals End -->
+        </div>
       </div>
     </div>
     <!-- Row End -->
