--- a/src/main/webapp/app/entities/voucher/detail/voucher-detail.component.html
+++ b/src/main/webapp/app/entities/voucher/detail/voucher-detail.component.html
@@ -24,7 +24,7 @@
         </dd>
         <dt><span jhiTranslate="sellphonealamApp.voucher.promotionPrice">Promotion Price</span></dt>
         <dd>
-          <span>{{ voucher.promotionPrice }}</span>
+          <span>{{ voucher.promotionRate }}</span>
         </dd>
         <dt><span jhiTranslate="sellphonealamApp.voucher.dateIssue">Date Issue</span></dt>
         <dd>
