--- a/src/main/webapp/app/entities/voucher/list/voucher.component.html
+++ b/src/main/webapp/app/entities/voucher/list/voucher.component.html
@@ -58,7 +58,7 @@
           </td>
           <td>{{ voucher.voucherCode }}</td>
           <td>{{ voucher.productID }}</td>
-          <td>{{ voucher.promotionPrice }}</td>
+          <td>{{ voucher.promotionRate }}</td>
           <td>{{ voucher.dateIssue | formatMediumDate }}</td>
           <td>{{ voucher.status }}</td>
           <td class="text-right">
