--- a/src/main/webapp/content/css/style.css
+++ b/src/main/webapp/content/css/style.css
@@ -3649,6 +3649,7 @@ p.checkout-coupon input[type='submit'] {
   height: 32px;
   padding-left: 10px;
   width: 100%;
+  border-radius: 10rem;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -3667,7 +3668,7 @@ p.checkout-coupon input[type='submit'] {
 .checkout-form-list input[type='email'] {
   background: #ffffff none repeat scroll 0 0;
   border: 1px solid #ebebeb;
-  border-radius: 0;
+  border-radius: 10rem;
   -webkit-box-shadow: 0 0px 2px rgba(0, 0, 0, 0.075);
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.075);
   height: 34px;
